--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
         <title>hello and welcome to my very cool website</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="/style.css">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>     
         <div class="header">
             <img src="qwv7FTm8.gif">
-            <h1>professional web designer</h1>
+            <h1>profesionall web designer</h1>
             <marquee direction="left" scrollamount="6" behavior="scroll" style="width: 400px; height: 30px; color: #22ff00; font-size: 30px; font-family: Comic Sans MS; text-decoration: blink;">Hi!! Thakns for visitng my porrfolio page. Pls take a look around and enjoy your stay :)</marquee>
         </div>
         <p align="center"><img src="coolbar.gif"></p>
