--- a/about.html
+++ b/about.html
@@ -1,8 +1,4 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
 <html>
     <head>
         <meta charset="utf-8">
@@ -20,7 +16,7 @@
                 If u like the look of mine i can definately make one for you , just DON'T COPY MINE!!! This website is copyright to me I worked really hard on it. Anyway as i said I can make u any kind of site u want and I can even make really cool animated banners to really make your site stand out!! If you want you can email me at the email address below:</p>
             <p align="center">xXjacknugyennn_69Xx@hotmail.com</p>
         <p align="center"><img src="coolbar.gif"></p>
-        <p align="center"><a href="/index.html"><img src="home.gif"></a> </p>
+        <p align="center"><a href="index.html"><img src="home.gif"></a> </p>
             <ul>
             <li><a href="about.html">about</a></li>
             <li><a href="pics.html">pics</a></li>
