--- a/pics.html
+++ b/pics.html
@@ -1,8 +1,4 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
 <html>
     <head>
         <meta charset="utf-8">
@@ -19,7 +15,7 @@
             
         </div>
         <p align="center"><img src="coolbar.gif"></p>
-        <p align="center"><a href="/index.html"><img src="home.gif"></a> </p>
+        <p align="center"><a href="index.html"><img src="home.gif"></a> </p>
             <ul>
             <li><a href="about.html">about</a></li>
             <li><a href="pics.html">pics</a></li>
