--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         </div>
         <p align="center"><img src="coolbar.gif"></p>
             <ul>
-            <li><a href="about.html">about</a></li>
-            <li><a href="pics.html">pics</p> </div> </a></li>
+            <li><a href="verycool/about.html">about</a></li>
+            <li><a href="verycool/pics.html">pics</p> </div> </a></li>
         </ul>   
     </body>
 </html>
