--- a/pics.html
+++ b/pics.html
@@ -15,10 +15,10 @@
             
         </div>
         <p align="center"><img src="coolbar.gif"></p>
-        <p align="center"><a href="verycool/index.html"><img src="home.gif"></a> </p>
+        <p align="center"><a href="index.html"><img src="home.gif"></a> </p>
             <ul>
-            <li><a href="verycool/about.html">about</a></li>
-            <li><a href="verycool/pics.html">pics</a></li>
+            <li><a href="about.html">about</a></li>
+            <li><a href="pics.html">pics</a></li>
         </ul> 
         </body>
 </html>
