--- a/about.html
+++ b/about.html
@@ -12,8 +12,11 @@
         <div class="header">
             <img src="qwv7FTm8.gif">
             <h1>about me</h1> </div>
-            <p class="body">Hello there as u can see from the really cool banner i made my name is Jack. I'm 18 years old. I'm a professional web develper with 20 years of experience. I can make any kind of website u like. 
+            <p class="body">
+                <img src="jack.jpg">
+                <p>Hello there as u can see from the really cool banner i made my name is Jack. I'm 18 years old. I'm a professional web develper with 20 years of experience. I can make any kind of website u like. 
                 If u like the look of mine i can definately make one for you , just DON'T COPY MINE!!! This website is copyright to me I worked really hard on it. Anyway as i said I can make u any kind of site u want and I can even make really cool animated banners to really make your site stand out!! If you want you can email me at the email address below:</p>
+            </p>
             <p align="center">xXjacknugyennn_69Xx@hotmail.com</p>
         <p align="center"><img src="coolbar.gif"></p>
         <p align="center"><a href="index.html"><img src="home.gif"></a> </p>
