--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <h1>profesionall web designer</h1>
             <marquee direction="left" scrollamount="6" behavior="scroll" style="width: 400px; height: 30px; color: #22ff00; font-size: 30px; font-family: Comic Sans MS; text-decoration: blink;">Hi!! Thakns for visitng my porrfolio page. Pls take a look around and enjoy your stay :)</marquee>
         </div>
+        <p>check out the links down below</p>
         <p align="center"><img src="coolbar.gif"></p>
             <ul>
             <li><a href="about.html">about</a></li>
