--- a/index.html
+++ b/index.html
@@ -20,5 +20,6 @@
             <li><a href="about.html">about</a></li>
             <li><a href="pics.html">pics</p> </div> </a></li>
         </ul>   
+        <embed src="darude-sandstorm.mid" hidden="true" autostart="true" autoplay="true">
     </body>
 </html>
