--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>hello and welcome to my very cool website</title>
         <meta name="description" content="">
+    
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="style.css">
     </head>
@@ -18,7 +19,8 @@
         <p align="center"><img src="coolbar.gif"></p>
             <ul>
             <li><a href="about.html">about</a></li>
-            <li><a href="pics.html">pics</p> </div> </a></li>
+            <li><a href="pics.html">pics </a></li>
+            <li><a href="https://brainsoup.me">my master</a></li>
         </ul>   
         <embed src="darude-sandstorm.mid" hidden="true" autostart="true" autoplay="true">
     </body>
