--- a/pics.html
+++ b/pics.html
@@ -16,9 +16,6 @@
         </div>
         <p align="center"><img src="coolbar.gif"></p>
         <p align="center"><a href="index.html"><img src="home.gif"></a> </p>
-            <ul>
-            <li><a href="about.html">about</a></li>
-            <li><a href="pics.html">pics</a></li>
-        </ul> 
+          <img src="238676341_199043568884981_2895106234111148616_n.jpg>"
         </body>
 </html>
