--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </head>
     <body>     
         <audio controls preload="auto"> 
-            <source src="darude-sandstorm.mid" />
+            <source src="darude-sandstorm.mid">
             <!-- now include flash fall back -->
           </audio>
           
