--- a/about.html
+++ b/about.html
@@ -14,8 +14,7 @@
             <h1>about me</h1> </div>
             <p class="body">
                 <img src="jack.jpg">
-                <p>Hello there as u can see from the really cool banner i made my name is Jack. I'm 18 years old. I'm a professional web develper with 20 years of experience. I can make any kind of website u like. 
-                If u like the look of mine i can definately make one for you , just DON'T COPY MINE!!! This website is copyright to me I worked really hard on it. Anyway as i said I can make u any kind of site u want and I can even make really cool animated banners to really make your site stand out!! If you want you can email me at the email address below:</p>
+                <p class="about">Heallo thar as yhu can c form the rly cool banerr i maed my naem iz Jack. Am 18 yer od and am a proffesnal wep devil eloper w/ yers experance . i can maek any wepsite u wnt evn tha durty ones *wink wonk* if yhu liek my wepsite i can defnaitely maek yhu 1, but DOANT copy mine!!! Dis wepbstire is copyrighht to me, I wotked rly haed on et. Anywy ass I sead I can maek yhu any kind of wepsight u waenyt n I can makek rly koool anime ted banerrz 2 make yhuor sight stand out! If yhu waent yhu cn emel me @t superseriousbusinessstuff@gmail.com</p>
             </p>
             <p align="center">xXjacknugyennn_69Xx@hotmail.com</p>
         <p align="center"><img src="coolbar.gif"></p>
