--- a/pics.html
+++ b/pics.html
@@ -17,5 +17,15 @@
         <p align="center"><img src="coolbar.gif"></p>
         <p align="center"><a href="index.html"><img src="home.gif"></a> </p>
         <img src="pee.jpg">
+        <img src="1.png">
+        <img src="2.jpg">
+        <img src="3.jpg">
+        <img src="4.jpg">
+        <img src="5.jpg">
+        <img src="6.jpg">
+        <img src="7.jpg">
+        <img src="8.jpg">
+        <img src="9.jpg">
+
  </body>
 </html>
