--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
             <p class="body">
                 <img src="jack.jpg">
                 <br />
-                <img src="spincan.gif">
+                <img src="spincan.gif"><img src="spincan.gif"><img src="spincan.gif"><img src="spincan.gif"><img src="spincan.gif">
                 <p class="about">Heallo thar as yhu can c form the rly cool banerr i maed my naem iz Jack. Am 18 yer od and am a proffesnal wep devil eloper w/ yers experance . i can maek any wepsite u wnt evn tha durty ones *wink wonk* if yhu liek my wepsite i can defnaitely maek yhu 1, but DOANT copy mine!!! Dis wepbstire is copyrighht to me, I wotked rly haed on et. Anywy ass I sead I can maek yhu any kind of wepsight u waenyt n I can makek rly koool anime ted banerrz 2 make yhuor sight stand out! If yhu waent yhu cn emel me @t superseriousbusinessstuff@gmail.com</p>
             </p>
             <p align="center">xXjacknugyennn_69Xx@hotmail.com</p>
