--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <ul>
             <li><a href="about.html">about</a></li>
             <li><a href="pics.html">pics </a></li>
-            <li><a href="https://brainsoup.me">my master</a></li>
+            <li><a href="https://brainsoup.me" target="_blank">my master</a></li>
         </ul>   
     </body>
 </html>
